// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTile As Button renders correctly 1`] = `
<div
  class="fd-product-tile"
  role="button"
>
  <div
    class="fd-product-tile__media"
    style="background-image: url(https://techne.yaas.io/images/product-thumbnail-wide.png);"
  />
   
  <div
    class="fd-product-tile__content"
  >
    <h2
      class="fd-product-tile__title"
    >
      Default Product Tile
    </h2>
     
  </div>
</div>
`;

exports[`ProductTile renders correctly 1`] = `
<div
  class="fd-product-tile"
>
  <div
    class="fd-product-tile__media"
    style="background-image: url(https://techne.yaas.io/images/product-thumbnail-wide.png);"
  />
   
  <div
    class="fd-product-tile__content"
  >
    <h2
      class="fd-product-tile__title"
    >
      Default Product Tile
    </h2>
     
  </div>
</div>
`;
